--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "exceljs": "^4.3.0",
+    "express": "^4.18.1",
     "formidable": "^2.0.1",
     "textract": "^2.5.0",
     "xlsx": "^0.18.5"
